--- a/README
+++ b/README
@@ -45,6 +45,7 @@ The chroot contains an standard Ubuntu debootstrap. The required customization c
  - CUSTOM_DEBOOTSTRAP_COPY: (local) directory to copy (rsync) into root directory of debootstrap. You can use this option to override any file in chroot.
  - CUSTOM_DEBOOTSTRAP_PKGLIST: filename of a list of packages to install/purge/hold in dpkg --get-selections format.
  - CUSTOM_DEBOOSTRAP_CMD: custom command to execute in the chroot after debootstrap, custom install and custom copy. The next step is just the simulated installation of metapackages.
+'update-lists' supports option "--current-target=<DIRNAME>" to re-use a debootstrap dir to speed the process. Customization is not skipped.
 Note that 'update-lists' uses debootstrap and REQUIRES root privileges.
 
 update scripts and package building
