--- a/README
+++ b/README
@@ -41,7 +41,7 @@ reprepro package lists
 'update-lists' script generates and updates ".pkg" files in 'lists' directory. The script generates a file for each 'sources' file, with the same name but with '.pkg' extension. The files are in the format of dpkg --get-selections, so they are suitable to use as filter with reprepro.
 In order to generate lists, 'update-lists' simulates the installation of CURRENT metapackages in a debootstrap chroot environment to detect required packages from each source.
 The chroot contains an standard Ubuntu debootstrap. The required customization can be archieved AFTER debootstrap installation with some OPTIONALS variables in aurex-meta.conf. The variables and action order is:
- - CUSTOM_DEBOOTSTRAP_SOURCESLIST: filename of sources.list file to replace /et(apt/sources.list in chroot
+ - CUSTOM_DEBOOTSTRAP_SOURCESLIST: filename of sources.list file to replace /et(apt/sources.list in chroot. If not specified, directory sources is expanded, and all the resulting sources.list files concatenated.
  - CUSTOM_DEBOOTSTRAP_COPY: (local) directory to copy (rsync) into root directory of debootstrap. You can use this option to override any file in chroot.
  - CUSTOM_DEBOOTSTRAP_PKGS: space separated list of packages to install into the chroot
  - CUSTOM_DEBOOSTRAP_CMD: custom command to execute in the chroot after debootstrap, custom install and custom copy. The next step is just the simulated installation of metapackages.
