--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+aurex-meta (1.197+aurex10.04.2) lucid; urgency=low
+
+  * Refreshed dependencies
+  * Added aurex-desktop to desktop
+  * Added aurex-standard to standard
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Wed, 31 Aug 2011 20:30:29 +0200
+
 aurex-meta (1.197+aurex10.04.1) lucid; urgency=low
 
   * Refreshed dependencies
