--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+aurex-meta (1.197+aurex10.04.3) lucid; urgency=low
+
+  * Addes support for amd64 
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 05 Sep 2011 18:52:34 +0200
+
 aurex-meta (1.197+aurex10.04.2) lucid; urgency=low
 
   * Refreshed dependencies
