--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+aurex-meta (1.197+aurex10.04.5) lucid; urgency=low
+
+  * Refreshed dependencies
+  * Added smbclient to aurex-desktop
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Tue, 06 Sep 2011 09:14:16 +0200
+
 aurex-meta (1.197+aurex10.04.4) lucid; urgency=low
 
   * Refreshed dependencies
