--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,7 @@ aurex-meta (1.197~aurex10.04.7) lucid; urgency=low
   * Removed aurex-standard from standard
   * Removed nautilus-dropbox from aurex-supported
 
- -- depinf <depinf@s07-server>  Thu, 08 Sep 2011 13:18:34 +0200
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Thu, 08 Sep 2011 13:18:34 +0200
 
 aurex-meta (1.197~aurex10.04.6) lucid; urgency=low
 
