--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+aurex-meta (1.197~aurex10.04.10) lucid; urgency=low
+
+  * Refreshed dependencies
+  * Added nautilus-dropbox to aurex-supported
+  * Added smbclient to aurex-desktop
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Thu, 08 Sep 2011 14:15:44 +0200
+
+aurex-meta (1.197~aurex10.04.9) lucid; urgency=low
+
+  * Refreshed dependencies
+  * Added smbclient to aurex-desktop
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Thu, 08 Sep 2011 14:09:01 +0200
+
 aurex-meta (1.197~aurex10.04.8) lucid; urgency=low
 
   * Refreshed dependencies
