--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+aurex-meta (1.197~aurex10.04.13) lucid; urgency=low
+
+  * Refreshed dependencies
+  * Added aurex-ubiquity-theme to aurex-supported
+  * Added aurex-ubiquity-transmute to aurex-supported
+  * Added smbclient to aurex-desktop
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 12 Sep 2011 11:33:59 +0200
+
 aurex-meta (1.197~aurex10.04.12) lucid; urgency=low
 
   * Refreshed dependencies
