--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+aurex-meta (1.197~aurex10.04.27) lucid; urgency=low
+
+  * Refreshed dependencies
+  * Added flashplugin-installer to aurex-desktop [amd64]
+  * Added smbclient to aurex-desktop
+  * Added unzip to aurex-desktop
+  * Added zip to aurex-desktop
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Thu, 20 Oct 2011 10:50:08 +0200
+
 aurex-meta (1.197~aurex10.04.26) lucid; urgency=low
 
   * Refreshed dependencies
