--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+aurex-meta (1.267~aurex12.04.1) precise; urgency=low
+
+  * First release for 'precise'
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Sat, 25 Aug 2012 11:36:01 +0200
+
 aurex-meta (1.197~aurex10.04.33) lucid; urgency=low
 
   * Refreshed dependencies
